# flappy

./: CMakeLists.txt
src/: CMakeLists.txt  flappy.cc  flappy.h  main.cc
src/sdl/: CMakeLists.txt  color.cc  color.h  core.h  engine.cc  engine.h  entity.cc  entity.h  event.cc  event.h  font.cc  font.h  fwd.h  global.cc  global.h  json.cc  json.h  loader.cc  loader.h  logger.h  math.h  rectangle.cc  rectangle.h  renderer.cc  renderer.h  sdl.cc  sdl.h  sdl_image.cc  sdl_image.h  sdl_ttf.cc  sdl_ttf.h  sprite.cc  sprite.h  surface.cc  surface.h  texture.cc  texture.h  window.cc  window.h
